feat(agent): coordinate durable result binding lifecycle